--- a/coffee.html
+++ b/coffee.html
@@ -9,8 +9,6 @@
 </head>
 <body>
     <main>
-        <img src="images/cupShadow.png" class="coffeeImg shadow">
-        <img src="images/coffeeCard.png" class="coffeeImg">
         <div class="top2">
             <a href="index.html" class="backTo">
                 <img src="images/back.png">
@@ -22,55 +20,58 @@
                     <img src="images/orderVect.png" class="front" alt="orderVector">
                 </div>
                 <h3>ORDER STATUS</h3>
-                <a id="orderCount2"></a>
+                <a id="orderCount">0</a>
             </button>
         </div>
-        
+        <img src="images/cupShadow.png" class="coffeeImg shadow">
+        <img src="images/coffeeCard.png" class="coffeeImg">
         <div class="order">
             <div class="right2">
-                <h1 id="coffeeName0">Cinnamon and Cocoa</h1>
+                <h1 id="coffeeName"></h1>
                 <p>A single espresso shot poured into hot foamy milk, with the surface topped with mildly sweetened cocoa powder and drizzled with scrumptious caramel syrup.</p>
                 <h3>SIZE</h3>
                 <div class="options">
                     <button class="chosen short">
-                        <img src="images/dark.png" class="activeImg">
-                        <img src="images/light.png" class="noActiveImg">
+                        <img src="images/dark.png">
                         SHORT
                     </button>
                     <button class="noChosen tall">
-                        <img src="images/dark.png" class="noActiveImg">
-                        <img src="images/light.png" class="activeImg">
+                        <img src="images/dark.png">
                         TALL
                     </button>
                     <button class="noChosen grand">
-                        <img src="images/dark.png" class="noActiveImg">
-                        <img src="images/light.png" class="activeImg">
+                        <img src="images/dark.png">
                         GRANDE
                     </button>
                     <button class="noChosen venti">
-                        <img src="images/dark.png" class="noActiveImg">
-                        <img src="images/light.png" class="activeImg">
+                        <img src="images/dark.png">
                         VENTI
                     </button>
                 </div>
                 <h3>EXTRA</h3>
                 <div class="options">
-                    <button class="noChosen">SHUGAR</button>
-                    <button class="noChosen">MILK</button>
+                    <button class="noChosen" id="shugar">SHUGAR</button>
+                    <button class="noChosen" id="milk">MILK</button>
                 </div>
                 <h3>MILK TYPE</h3>
                 <div class="options">
-                    <button class="noChosen">OAT MILK</button>
-                    <button class="noChosen">SOY MILK</button>
-                    <button class="noChosen">ALMOND MILK</button>
+                    <button class="noChosen" id="oat">OAT MILK</button>
+                    <button class="noChosen" id="soy">SOY MILK</button>
+                    <button class="noChosen" id="almond">ALMOND MILK</button>
                 </div>
-                <div class="coffeeCost">
-
+                <div class="options">
+                    <h2 id="cost">1</h2>
+                    <div class="coffeeCost">
+                        <button class="plusMin" id="min">-</button>
+                        <a id="addCoffeeCount">1</a>
+                        <button class="plusMin" id="plus">+</button>
+                    </div>
                 </div>
                 <button class="placeOrd">PLACE ORDER</button>
+                <button id="clear">clearOrd</button>
             </div>
         </div>
     </main>
 </body>
-<script src="code.js"></script>
+<script src="coffeeCode.js"></script>
 </html>
