--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main class="main">
         <div class="left">
             <div class="types">
+                <button class="upDown" id="up"><img src="images/up.png"></button>
                 <button id="cappuccino" class="active">
                     <img src="images/Vector.png">
                     Cappuccino</button>
@@ -27,6 +28,13 @@
                 <button id="flatWhite" class="noActive">
                     <img src="images/Vector.png">
                     Flat White</button>
+                <button id="cacao" class="noActive close">
+                    <img src="images/Vector.png">
+                    Cacao</button>
+                <button id="matcha" class="noActive close">
+                    <img src="images/Vector.png">
+                    Mathca</button>
+                <button class="upDown" id="down"><img src="images/down.png"></button>
             </div>
         </div>
         <div class="right">
