--- a/coffee.html
+++ b/coffee.html
@@ -68,9 +68,37 @@
                     </div>
                 </div>
                 <button class="placeOrd">PLACE ORDER</button>
-                <button id="clear">clearOrd</button>
             </div>
         </div>
+        <section class="orderMenu close">
+            <div class="orderMenuPopup">
+                <div class="top2">
+                    <h2>Order Status</h2>
+                    <button class="popupCancel">
+                        <p>HIDE</p>
+                        <img src="images/right.png">
+                    </button>
+                </div>
+                <div class="ordStatuses">
+                    <div id="ordered">
+                    </div>
+                    <h3>Preparing</h3>
+                    <h3>Finished</h3>
+                    <h3>Served</h3>
+                </div>
+                <div class="totalCost" id="totalCost">
+                    <div class="findCost" id="subtotal">
+
+                    </div>
+                    <div class="findCost" id="discount">
+                        
+                    </div>
+                    <div class="findCost" id="total">
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 <script src="coffeeCode.js"></script>
